--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,38 @@
-/*  your css code here. If applicable */
+:root {
+    background-color: rgb(135, 206, 235);
+}
+
+/* Paragraph Styling */
+.one p:first-child {
+    background-color: black;
+    color: white;
+}
+
+.one p:nth-child(2) {
+    color: black; /* Default text color */
+}
+
+.one p:last-child {
+    color: red;
+}
+
+/* List Item Styling */
+ul li {
+    background-color: gray;
+    width: 50%;
+    padding: 10px;
+}
+
+ul li:nth-child(odd) {
+    background-color: white;
+}
+
+ul li:first-child,
+ul li:last-child {
+    font-size: 22px;
+}
+
+/* Third-to-last = 3rd item (index 3) in 5 items */
+ul li:nth-last-child(3) {
+    background-color: pink;
+}
